# visinfer-engine

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.base  Dockerfile.panel-label  Dockerfile.runtime  Dockerfile.scenes  PACKAGING.md  app.py  config.py  docker-compose.panel-label.yml  docker-compose.scenes.yml  docker-compose.yml  pyproject.toml  readme.md  requirements.scenes.txt  requirements.txt  setup.py  test.json  verify_cuda_options.py
config/: __init__.py  config.py  dc_fuse_confg.py  dc_fuse_config.py  indicator_light_config.py  lap_surf_conf.py  line_squeeze_config.py  panel_label_config.py  plate_screw_congfig.py
demo/: LineSqueezeDemo.py  dc_fuse.py  dc_fuse_yolo.py  indicator_light.py  lap_suf.py  panel_label_client.py  panel_label_demo.py  parallel_eval.py  plate.py  preview_vis.py
docs/: deploy.md  fix_multi_process_oom.md
routers/: __init__.py  backflow_service.py  base_router.py  dc_fuse.py  dc_fuse_routers.py  indicator.py  indicator_routers.py  lap_surf.py  lap_surf_routers.py  line_squeeze_routers.py  panel_routers.py  plate.py  plate_routers.py  response_builder.py  router_registry.py  stats_routers.py  upload_persistence.py  upload_processor.py  visualization.py
schemas/: __init__.py  common.py  data_base.py  dc_fuse_schemas.py  error_codes.py  exceptions.py  indicator_schemas.py  inference_context.py  lineSqueeze_schemas.py  panel_label_schemas.py
scripts/: auto_annotate.py  build_wheels.py  convert_ocr_dataset_to_ppocr.py  export_ocr_dataset.py  get_crop.py  pack.py  panel_label_client.py  (+2 more)
(+142 files in other folders)
